# assistant_core

./: .env.example  .pre-commit-config.yaml  AGENT_BUILD_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  STORE_USAGE_PATTERNS.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: main.yml  release.yml  test.yml  validate-pr.yml
assistant_core/: __init__.py  builder.py  factories.py  models.py  settings.py  state.py
assistant_core/builder/: __init__.py  agent.py  base.py  context.py  datetime.py  exceptions.py  question.py  tavily.py
assistant_core/nodes/: __init__.py  base.py  mixins.py  nodes.py
examples/: basic_example.ipynb  entrypoint_graph.ipynb  question_example.ipynb
scripts/: new_version.sh
tests/: conftest.py
tests/unit/: test_builder.py  test_builder_context.py  test_datetime_builder.py  test_model.py  test_nodes.py  test_states.py  test_tavily.py
