[tool.poetry]
name = "assistant-core"
version = "0.8.0"
description = ""
authors = ["Andres Javier Lopez <code@andresjavierlopez.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = ">=1.0,<2.0"
langchain-openai = "^0.3.3"
langgraph = ">=1.0,<2.0"
python-dotenv = "^1.0.1"
langchain-tavily = "^0.2.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = {extras = ["jupyter"], version = "^25.1.0"}
flake8 = "^7.3.0"
isort = "^6.0.1"
pre-commit = "^3.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
ipykernel = "^6.29.5"
openevals = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# make it compatible with black
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=assistant_core"
testpaths = "tests"
asyncio_mode = "auto"
